# claude-swap-rs

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  interactive.rs  main.rs  oauth.rs  paths.rs  profile.rs  ui.rs  update_check.rs
src/cmds/: activate.rs  alias.rs  default_cmd.rs  list.rs  login.rs  mod.rs  remove.rs  run.rs  shell_init.rs  upgrade.rs  usage.rs  watch.rs
tests/: cli.rs
